Fix for blurry text and image on hover

--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -97,7 +97,7 @@ $card-link-scaling: 1.1;
   position: relative;
   z-index: 1;
   box-shadow: $box-shadow-focus;
-  transform: scale($card-link-scaling) translate3d($translate-card-hover, 0, 0);
+  transform: scale($card-link-scaling) translateX($translate-card-hover);
   transform-origin: 50% 50%;
   overflow-x: visible;
   overflow-y: visible
